--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="mobile-header js-menu-container">
                 <div class="menu__burger" id="mobile-menu">
                     <ul class="menu__burger-nav">
-                        <li class="menu__burger-item"><a href="#" class="menu__burger-link">Studio</a></li>
+                        <li class="menu__burger-item"><a href="#" class="menu__burger-link active">Studio</a></li>
                         <li class="menu__burger-item"><a href="./portfolio.html" class="menu__burger-link">Portfolio</a>
                         </li>
                         <li class="menu__burger-item"><a href="#" class="menu__burger-link">Contacts</a>
